--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -82,20 +82,20 @@
     "\n",
     "tracking=tracking.with_columns([\n",
     "    pl.when(pl.col('playDirection')=='right').then(pl.col('dir').cast(pl.Float64)).otherwise(180-pl.col('dir').cast(pl.Float64)).alias('adjustedDir'),\n",
-    "    pl.when(pl.col('playDirection')=='right').then(pl.col('o').cast(pl.Float64)).otherwise(180-pl.col('o').cast(pl.Float64)).alias('adjustedO'),\n",
+    "    pl.when(pl.col('playDirection')=='right').then(pl.col('o').cast(pl.Float64)).otherwise((180+pl.col('o').cast(pl.Float64))%360).alias('adjustedO'),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "8b95e15d-5986-4c0e-9b63-948e509e2a56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONE_ANGLE = 15 # degrees\n",
-    "MAX_DISTANCE = 5 # feet\n",
-    "BLOCKING_RADIUS = 1 # feet\n",
+    "CONE_ANGLE = 20 # degrees\n",
+    "MAX_DISTANCE = 5 # yards\n",
+    "BLOCKING_RADIUS = 1 # yards\n",
     "\n",
     "# row = [o, dir, adjustedX, adjustedY, oDefender, dirDefender, adjustedXDefender, adjustedYDefender]\n",
     "def looking_to_block_or_blocking_df_fn(row) -> int:\n",
@@ -131,7 +131,20 @@
     "    x_dist = player2[2] - player1[2]\n",
     "    player1_orientation = float(player1[0]) if type(player1[0]) == str else player1[0]\n",
     "\n",
+    "    # print(\"isinangle\")\n",
+    "    # print(\"player1\")\n",
+    "    # print(player1)\n",
+    "\n",
+    "    # print(\"player2\")\n",
+    "    # print(player2)\n",
+    "\n",
+    "    # print(\"player1_ori\")\n",
+    "    # print(player1_orientation)\n",
+    "\n",
     "    angle = math.degrees(math.atan2(y_dist, x_dist))\n",
+    "\n",
+    "    # print(\"angle\")\n",
+    "    # print(angle)\n",
     "\n",
     "    if player1_orientation - half_cone_angle <= angle <= player1_orientation + half_cone_angle:\n",
     "        return True\n",
@@ -157,6 +170,10 @@
     "    y_dist = abs(player1[3] - player2[3])\n",
     "    x_dist = abs(player1[2] - player2[2])\n",
     "\n",
+    "    # print(y_dist)\n",
+    "    # print(x_dist)\n",
+    "    # print(math.sqrt(x_dist**2 + y_dist**2))\n",
+    "\n",
     "    return math.sqrt(x_dist**2 + y_dist**2)"
    ]
   },
@@ -168,7 +185,7 @@
    "outputs": [],
    "source": [
     "# This is just for testing - when we go for it we'll want to let it go against everything\n",
-    "labeled = tracking.filter(pl.col('gameId')==2022091104).filter(pl.col('frameId')==1)\n"
+    "labeled = tracking.filter(pl.col('gameId')==2022091104)\n"
    ]
   },
   {
@@ -211,7 +228,7 @@
    "outputs": [],
    "source": [
     "blocking_df = players.select(\n",
-    "    'o', 'dir', 'adjustedX', 'adjustedY', 'oDefender', 'dirDefender', 'adjustedXDefender', 'adjustedYDefender'\n",
+    "    'adjustedO', 'adjustedDir', 'adjustedX', 'adjustedY', 'adjustedODefender', 'adjustedDirDefender', 'adjustedXDefender', 'adjustedYDefender'\n",
     ").apply(looking_to_block_or_blocking_df_fn)"
    ]
   },
@@ -227,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "ad08e3de-799b-4763-82af-7456d488456a",
    "metadata": {},
    "outputs": [],
@@ -237,62 +254,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ac849814-c221-4d4f-a908-07e0105f99ee",
+   "execution_count": 11,
+   "id": "329dcaeb-adb4-40ed-8755-90d7030ed284",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><style>\n",
-       ".dataframe > thead > tr > th,\n",
-       ".dataframe > tbody > tr > td {\n",
-       "  text-align: right;\n",
-       "}\n",
-       "</style>\n",
-       "<small>shape: (429, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>displayName</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&quot;Fletcher Cox&quot;</td></tr><tr><td>&quot;Josh Sweat&quot;</td></tr><tr><td>&quot;Jonah Jackson&quot;</td></tr><tr><td>&quot;Josh Sweat&quot;</td></tr><tr><td>&quot;Josh Sweat&quot;</td></tr><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&quot;Milton William…</td></tr><tr><td>&quot;Frank Ragnow&quot;</td></tr><tr><td>&hellip;</td></tr><tr><td>&quot;Landon Dickers…</td></tr><tr><td>&quot;Isaac Seumalo&quot;</td></tr><tr><td>&quot;Jack Stoll&quot;</td></tr><tr><td>&quot;Zach Pascal&quot;</td></tr><tr><td>&quot;Noah Togiai&quot;</td></tr><tr><td>&quot;Jason Kelce&quot;</td></tr><tr><td>&quot;Benito Jones&quot;</td></tr><tr><td>&quot;Dallas Goedert…</td></tr><tr><td>&quot;Jason Kelce&quot;</td></tr><tr><td>&quot;Jack Stoll&quot;</td></tr><tr><td>&quot;Benito Jones&quot;</td></tr><tr><td>&quot;Alim McNeill&quot;</td></tr></tbody></table></div>"
-      ],
-      "text/plain": [
-       "shape: (429, 1)\n",
-       "┌───────────────┐\n",
-       "│ displayName   │\n",
-       "│ ---           │\n",
-       "│ str           │\n",
-       "╞═══════════════╡\n",
-       "│ Frank Ragnow  │\n",
-       "│ Fletcher Cox  │\n",
-       "│ Josh Sweat    │\n",
-       "│ Jonah Jackson │\n",
-       "│ …             │\n",
-       "│ Jason Kelce   │\n",
-       "│ Jack Stoll    │\n",
-       "│ Benito Jones  │\n",
-       "│ Alim McNeill  │\n",
-       "└───────────────┘"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "players.filter(pl.col('blockingStatus')!=0).select(pl.col('displayName'))"
+    "test = pl.read_parquet('../labeledDataAttempt/labeledBlocks.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "98a3f19a-2d13-4cb6-a8e6-674ff15089a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blocking_df = players.select(\n",
+    "    'adjustedO', 'adjustedDir', 'adjustedX', 'adjustedY', 'adjustedODefender', 'adjustedDirDefender', 'adjustedXDefender', 'adjustedYDefender'\n",
+    ").apply(looking_to_block_or_blocking_df_fn)\n",
+    "\n",
+    "blocking_df = blocking_df.to_series()\n",
+    "\n",
+    "players = players.with_columns(blockType=blocking_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "329dcaeb-adb4-40ed-8755-90d7030ed284",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = pl.read_parquet('../labeledDataAttempt/labeledBlocks.parquet')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
    "id": "2562dd20-cd7e-4793-8cdb-ccefb272dae6",
    "metadata": {},
    "outputs": [
@@ -305,40 +293,33 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (43, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>blockType</th></tr><tr><td>i32</td></tr></thead><tbody><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>&hellip;</td></tr><tr><td>2</td></tr><tr><td>2</td></tr><tr><td>2</td></tr><tr><td>2</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr><tr><td>1</td></tr></tbody></table></div>"
+       "<small>shape: (2, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedX</th><th>adjustedY</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>playId</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i32</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>23.38</td><td>33.52</td><td>21.43</td><td>38.93</td><td>1</td><td>3</td><td>86</td></tr><tr><td>23.99</td><td>83.42</td><td>24.94</td><td>88.3</td><td>0</td><td>3</td><td>107</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (43, 1)\n",
-       "┌───────────┐\n",
-       "│ blockType │\n",
-       "│ ---       │\n",
-       "│ i32       │\n",
-       "╞═══════════╡\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "│ …         │\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "│ 1         │\n",
-       "└───────────┘"
+       "shape: (2, 7)\n",
+       "┌───────────┬───────────┬───────────────────┬───────────────────┬───────────┬─────────────────┬────────┐\n",
+       "│ adjustedX ┆ adjustedY ┆ adjustedXDefender ┆ adjustedYDefender ┆ blockType ┆ framesSinceSnap ┆ playId │\n",
+       "│ ---       ┆ ---       ┆ ---               ┆ ---               ┆ ---       ┆ ---             ┆ ---    │\n",
+       "│ f64       ┆ f64       ┆ f64               ┆ f64               ┆ i32       ┆ i64             ┆ i64    │\n",
+       "╞═══════════╪═══════════╪═══════════════════╪═══════════════════╪═══════════╪═════════════════╪════════╡\n",
+       "│ 23.38     ┆ 33.52     ┆ 21.43             ┆ 38.93             ┆ 1         ┆ 3               ┆ 86     │\n",
+       "│ 23.99     ┆ 83.42     ┆ 24.94             ┆ 88.3              ┆ 0         ┆ 3               ┆ 107    │\n",
+       "└───────────┴───────────┴───────────────────┴───────────────────┴───────────┴─────────────────┴────────┘"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.filter(pl.col('displayName')==\"Frank Ragnow\").select(pl.col('blockType'))"
+    "test.filter(pl.col('displayName')==\"Frank Ragnow\").filter(pl.col('displayNameDefender')==\"Kyzir White\").filter(pl.col('gameId')==2022091104).select(pl.col('adjustedX'), pl.col('adjustedY'), pl.col('adjustedXDefender'), pl.col('adjustedYDefender'), pl.col('blockType'), pl.col('framesSinceSnap'), pl.col('playId')).filter(pl.col('framesSinceSnap')==3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "4d5bde94-3d6c-4699-af12-939ca06a6a95",
+   "execution_count": 14,
+   "id": "9484dd10-7bdf-48ce-9064-31879d71e1a4",
    "metadata": {},
    "outputs": [
     {
@@ -350,48 +331,110 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (12, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>blockType</th></tr><tr><td>i64</td></tr></thead><tbody><tr><td>2</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr><tr><td>0</td></tr></tbody></table></div>"
+       "<small>shape: (1, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedX</th><th>adjustedY</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>playId</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>23.38</td><td>33.52</td><td>21.43</td><td>38.93</td><td>0</td><td>3</td><td>86</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (12, 1)\n",
-       "┌───────────┐\n",
-       "│ blockType │\n",
-       "│ ---       │\n",
-       "│ i64       │\n",
-       "╞═══════════╡\n",
-       "│ 2         │\n",
-       "│ 0         │\n",
-       "│ 0         │\n",
-       "│ 0         │\n",
-       "│ …         │\n",
-       "│ 0         │\n",
-       "│ 0         │\n",
-       "│ 0         │\n",
-       "│ 0         │\n",
-       "└───────────┘"
+       "shape: (1, 7)\n",
+       "┌───────────┬───────────┬───────────────────┬───────────────────┬───────────┬─────────────────┬────────┐\n",
+       "│ adjustedX ┆ adjustedY ┆ adjustedXDefender ┆ adjustedYDefender ┆ blockType ┆ framesSinceSnap ┆ playId │\n",
+       "│ ---       ┆ ---       ┆ ---               ┆ ---               ┆ ---       ┆ ---             ┆ ---    │\n",
+       "│ f64       ┆ f64       ┆ f64               ┆ f64               ┆ i64       ┆ i64             ┆ i64    │\n",
+       "╞═══════════╪═══════════╪═══════════════════╪═══════════════════╪═══════════╪═════════════════╪════════╡\n",
+       "│ 23.38     ┆ 33.52     ┆ 21.43             ┆ 38.93             ┆ 0         ┆ 3               ┆ 86     │\n",
+       "└───────────┴───────────┴───────────────────┴───────────────────┴───────────┴─────────────────┴────────┘"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "players.filter(pl.col('displayName')==\"Frank Ragnow\").filter(pl.col('playId')==58).select(pl.col('blockType'))"
+    "players.filter(pl.col('displayName')==\"Frank Ragnow\").filter(pl.col('displayNameDefender')==\"Kyzir White\").filter(pl.col('gameId')==2022091104).select(pl.col('adjustedX'), pl.col('adjustedY'), pl.col('adjustedXDefender'), pl.col('adjustedYDefender'), pl.col('blockType'), pl.col('framesSinceSnap'), pl.col('playId')).filter(pl.col('framesSinceSnap')==3).filter(pl.col('playId')==86)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "55dff58e-5318-4f3b-a680-5ca0da8dfadb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = players.filter(pl.col('jerseyNumber')=='88').filter(pl.col('gameId')==2022091104).filter(pl.col('playId')==86)\n",
+    "blocking_df = test_data.select(\n",
+    "    'adjustedO', 'adjustedDir', 'adjustedX', 'adjustedY', 'adjustedODefender', 'adjustedDirDefender', 'adjustedXDefender', 'adjustedYDefender'\n",
+    ").apply(looking_to_block_or_blocking_df_fn)\n",
+    "\n",
+    "blocking_df = blocking_df.to_series()\n",
+    "\n",
+    "test_data = test_data.with_columns(blockType=blocking_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "5a783b5f-d4e9-4175-80d0-f1f9b26f86a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (24, 3)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>jerseyNumberDefender</th><th>framesSinceSnap</th><th>blockType</th></tr><tr><td>str</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>&quot;97&quot;</td><td>12</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>13</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>14</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>15</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>16</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>17</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>18</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>19</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>20</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>21</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>22</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>23</td><td>2</td></tr><tr><td>&quot;97&quot;</td><td>39</td><td>1</td></tr><tr><td>&quot;97&quot;</td><td>41</td><td>1</td></tr><tr><td>&quot;97&quot;</td><td>42</td><td>1</td></tr><tr><td>&quot;97&quot;</td><td>43</td><td>1</td></tr><tr><td>&quot;97&quot;</td><td>44</td><td>1</td></tr><tr><td>&quot;23&quot;</td><td>27</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>19</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>20</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>21</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>22</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>23</td><td>1</td></tr><tr><td>&quot;NA&quot;</td><td>24</td><td>1</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (24, 3)\n",
+       "┌──────────────────────┬─────────────────┬───────────┐\n",
+       "│ jerseyNumberDefender ┆ framesSinceSnap ┆ blockType │\n",
+       "│ ---                  ┆ ---             ┆ ---       │\n",
+       "│ str                  ┆ i64             ┆ i64       │\n",
+       "╞══════════════════════╪═════════════════╪═══════════╡\n",
+       "│ 97                   ┆ 12              ┆ 2         │\n",
+       "│ 97                   ┆ 13              ┆ 2         │\n",
+       "│ 97                   ┆ 14              ┆ 2         │\n",
+       "│ 97                   ┆ 15              ┆ 2         │\n",
+       "│ 97                   ┆ 16              ┆ 2         │\n",
+       "│ 97                   ┆ 17              ┆ 2         │\n",
+       "│ 97                   ┆ 18              ┆ 2         │\n",
+       "│ 97                   ┆ 19              ┆ 2         │\n",
+       "│ 97                   ┆ 20              ┆ 2         │\n",
+       "│ 97                   ┆ 21              ┆ 2         │\n",
+       "│ 97                   ┆ 22              ┆ 2         │\n",
+       "│ 97                   ┆ 23              ┆ 2         │\n",
+       "│ 97                   ┆ 39              ┆ 1         │\n",
+       "│ 97                   ┆ 41              ┆ 1         │\n",
+       "│ 97                   ┆ 42              ┆ 1         │\n",
+       "│ 97                   ┆ 43              ┆ 1         │\n",
+       "│ 97                   ┆ 44              ┆ 1         │\n",
+       "│ 23                   ┆ 27              ┆ 1         │\n",
+       "│ NA                   ┆ 19              ┆ 1         │\n",
+       "│ NA                   ┆ 20              ┆ 1         │\n",
+       "│ NA                   ┆ 21              ┆ 1         │\n",
+       "│ NA                   ┆ 22              ┆ 1         │\n",
+       "│ NA                   ┆ 23              ┆ 1         │\n",
+       "│ NA                   ┆ 24              ┆ 1         │\n",
+       "└──────────────────────┴─────────────────┴───────────┘"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl.Config(tbl_rows=200)\n",
+    "test_data.select(pl.col('jerseyNumberDefender'), pl.col('framesSinceSnap'), pl.col('blockType')).filter(pl.col('blockType')!=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87e4ec7d-d056-48ca-a7e4-916ec2501223",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b31a8cfd-69e7-4d86-8c3e-4ed19fb03f7e",
+   "id": "78d219af-7963-4fe5-93cd-33388242e615",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -413,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
