fix orientation calc

--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "id": "5a783b5f-d4e9-4175-80d0-f1f9b26f86a5",
    "metadata": {},
    "outputs": [
@@ -421,12 +421,13 @@
        "└──────────────────────┴─────────────────┴───────────┘"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# why is 97 not seen by 88???? figure ths out\n",
     "pl.Config(tbl_rows=200)\n",
     "test_data.select(pl.col('jerseyNumberDefender'), pl.col('framesSinceSnap'), pl.col('blockType')).filter(pl.col('blockType')!=0)"
    ]
