--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e74626b0-a053-4344-bf2e-bdcd3e862b65",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "1130d89d-3973-48d9-98ce-d95b4fc6de93",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
     "\n",
     "# Both players can see each other\n",
     "def is_dent(player1: tuple, player2: tuple) -> bool:\n",
-    "    return is_in_vision_cone(player2, player1, 50)\n",
+    "    return is_in_vision_cone(player1, player2, 50) and is_in_vision_cone(player2, player1, 50)\n",
     "\n",
     "def is_right_vision_cone(player1: tuple, player2: tuple) -> bool:\n",
     "    player2[0] = (player2[0] - 90) % 360\n",
@@ -239,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3120895b-29e3-4bbb-8b55-6ffcdf587384",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GAME_ID = 2022091110\n",
-    "PLAY_ID = 3797\n",
+    "GAME_ID = 2022091500\n",
+    "PLAY_ID = 55\n",
     "JERSEY_NUMBER = '62'\n",
     "JERSEY_NUMBER_DEFENDER = '97'\n",
     "\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4a9fd1a6-62ca-4c8c-86a8-12853d69cb11",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ef1f12a3-c2df-4692-88b0-06d7d0c5aa40",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "55dff58e-5318-4f3b-a680-5ca0da8dfadb",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b215deae-24c8-4e0e-96d9-5e8d8cf6e9f2",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "4fe4010a-0725-4bde-86e4-2400cb4d51ae",
    "metadata": {},
    "outputs": [
@@ -341,40 +341,45 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (86, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedO</th><th>adjustedDir</th><th>adjustedX</th><th>adjustedY</th><th>adjustedODefender</th><th>adjustedDirDefender</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>blockLocation</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>188.03</td><td>-157.22</td><td>28.49</td><td>19.13</td><td>255.38</td><td>-147.14</td><td>35.63</td><td>20.79</td><td>0</td><td>-5</td><td>&quot;right&quot;</td></tr><tr><td>188.03</td><td>-159.34</td><td>28.49</td><td>19.13</td><td>253.54</td><td>-171.29</td><td>35.64</td><td>20.79</td><td>0</td><td>-4</td><td>&quot;right&quot;</td></tr><tr><td>188.03</td><td>-166.34</td><td>28.49</td><td>19.12</td><td>253.54</td><td>175.83</td><td>35.65</td><td>20.78</td><td>0</td><td>-3</td><td>&quot;right&quot;</td></tr><tr><td>188.03</td><td>-173.62</td><td>28.49</td><td>19.12</td><td>253.54</td><td>172.5</td><td>35.68</td><td>20.78</td><td>0</td><td>-2</td><td>&quot;right&quot;</td></tr><tr><td>181.77</td><td>102.61</td><td>28.49</td><td>19.11</td><td>253.54</td><td>166.14</td><td>35.72</td><td>20.77</td><td>0</td><td>-1</td><td>&quot;right&quot;</td></tr><tr><td>183.75</td><td>128.37</td><td>28.51</td><td>19.1</td><td>253.54</td><td>156.46</td><td>35.77</td><td>20.74</td><td>0</td><td>0</td><td>&quot;right&quot;</td></tr><tr><td>176.61</td><td>137.26</td><td>28.53</td><td>19.08</td><td>254.12</td><td>144.55</td><td>35.82</td><td>20.69</td><td>0</td><td>1</td><td>&quot;right&quot;</td></tr><tr><td>173.78</td><td>142.8</td><td>28.58</td><td>19.05</td><td>256.59</td><td>122.57</td><td>35.84</td><td>20.61</td><td>0</td><td>2</td><td>&quot;right&quot;</td></tr><tr><td>173.16</td><td>146.72</td><td>28.67</td><td>18.99</td><td>259.47</td><td>107.64</td><td>35.86</td><td>20.52</td><td>0</td><td>3</td><td>&quot;right&quot;</td></tr><tr><td>217.25</td><td>153.17</td><td>28.84</td><td>18.92</td><td>251.9</td><td>92.33</td><td>35.86</td><td>20.39</td><td>0</td><td>4</td><td>&quot;right&quot;</td></tr><tr><td>232.51</td><td>156.23</td><td>29.04</td><td>18.84</td><td>246.12</td><td>82.98</td><td>35.84</td><td>20.24</td><td>0</td><td>5</td><td>&quot;right&quot;</td></tr><tr><td>265.82</td><td>157.72</td><td>29.27</td><td>18.74</td><td>249.21</td><td>72.83</td><td>35.77</td><td>20.06</td><td>0</td><td>6</td><td>&quot;right&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>130.47</td><td>-53.1</td><td>30.91</td><td>29.26</td><td>146.29</td><td>-46.2</td><td>18.08</td><td>39.96</td><td>0</td><td>69</td><td>&quot;none&quot;</td></tr><tr><td>129.54</td><td>-53.29</td><td>30.74</td><td>29.49</td><td>158.74</td><td>-44.76</td><td>17.47</td><td>40.56</td><td>0</td><td>70</td><td>&quot;left&quot;</td></tr><tr><td>132.38</td><td>-53.66</td><td>30.57</td><td>29.72</td><td>182.92</td><td>-43.16</td><td>16.86</td><td>41.13</td><td>0</td><td>71</td><td>&quot;left&quot;</td></tr><tr><td>132.38</td><td>-53.84</td><td>30.4</td><td>29.95</td><td>187.79</td><td>-41.08</td><td>16.23</td><td>41.67</td><td>0</td><td>72</td><td>&quot;left&quot;</td></tr><tr><td>130.2</td><td>-53.84</td><td>30.24</td><td>30.17</td><td>187.79</td><td>-39.09</td><td>15.61</td><td>42.17</td><td>0</td><td>73</td><td>&quot;left&quot;</td></tr><tr><td>124.88</td><td>-54.61</td><td>30.08</td><td>30.4</td><td>192.99</td><td>-36.94</td><td>14.99</td><td>42.63</td><td>0</td><td>74</td><td>&quot;left&quot;</td></tr><tr><td>124.88</td><td>-54.47</td><td>29.92</td><td>30.62</td><td>199.62</td><td>-34.37</td><td>14.37</td><td>43.05</td><td>0</td><td>75</td><td>&quot;left&quot;</td></tr><tr><td>126.45</td><td>-55.11</td><td>29.78</td><td>30.84</td><td>203.14</td><td>-32.24</td><td>13.77</td><td>43.43</td><td>0</td><td>76</td><td>&quot;left&quot;</td></tr><tr><td>126.45</td><td>-54.5</td><td>29.62</td><td>31.05</td><td>205.9</td><td>-30.23</td><td>13.19</td><td>43.78</td><td>0</td><td>77</td><td>&quot;left&quot;</td></tr><tr><td>128.72</td><td>-53.95</td><td>29.47</td><td>31.26</td><td>208.23</td><td>-28.57</td><td>12.64</td><td>44.09</td><td>0</td><td>78</td><td>&quot;left&quot;</td></tr><tr><td>128.72</td><td>-53.66</td><td>29.32</td><td>31.46</td><td>213.12</td><td>-27.23</td><td>12.12</td><td>44.36</td><td>0</td><td>79</td><td>&quot;left&quot;</td></tr><tr><td>127.37</td><td>-53.13</td><td>29.18</td><td>31.66</td><td>218.74</td><td>-26.76</td><td>11.63</td><td>44.62</td><td>0</td><td>80</td><td>&quot;left&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (52, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedO</th><th>adjustedDir</th><th>adjustedX</th><th>adjustedY</th><th>adjustedODefender</th><th>adjustedDirDefender</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>blockLocation</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>80.08</td><td>-32.54</td><td>28.07</td><td>33.8</td><td>245.97</td><td>81.62</td><td>35.0</td><td>35.35</td><td>0</td><td>-5</td><td>&quot;right&quot;</td></tr><tr><td>81.64</td><td>-43.62</td><td>28.08</td><td>33.8</td><td>245.97</td><td>100.92</td><td>35.01</td><td>35.35</td><td>0</td><td>-4</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-43.7</td><td>28.08</td><td>33.8</td><td>247.56</td><td>110.45</td><td>35.02</td><td>35.34</td><td>0</td><td>-3</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-47.95</td><td>28.08</td><td>33.8</td><td>247.56</td><td>126.32</td><td>35.04</td><td>35.34</td><td>0</td><td>-2</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-57.33</td><td>28.09</td><td>33.8</td><td>247.56</td><td>130.24</td><td>35.04</td><td>35.34</td><td>0</td><td>-1</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-164.93</td><td>28.11</td><td>33.79</td><td>246.7</td><td>121.34</td><td>35.05</td><td>35.32</td><td>0</td><td>0</td><td>&quot;right&quot;</td></tr><tr><td>82.33</td><td>178.18</td><td>28.12</td><td>33.79</td><td>245.93</td><td>106.78</td><td>35.05</td><td>35.3</td><td>0</td><td>1</td><td>&quot;right&quot;</td></tr><tr><td>81.52</td><td>173.78</td><td>28.13</td><td>33.78</td><td>244.84</td><td>95.22</td><td>35.05</td><td>35.28</td><td>0</td><td>2</td><td>&quot;right&quot;</td></tr><tr><td>80.11</td><td>164.91</td><td>28.16</td><td>33.77</td><td>245.72</td><td>88.76</td><td>35.05</td><td>35.23</td><td>0</td><td>3</td><td>&quot;right&quot;</td></tr><tr><td>78.45</td><td>168.12</td><td>28.2</td><td>33.77</td><td>241.88</td><td>86.25</td><td>35.05</td><td>35.16</td><td>0</td><td>4</td><td>&quot;right&quot;</td></tr><tr><td>75.76</td><td>171.64</td><td>28.31</td><td>33.75</td><td>240.15</td><td>79.68</td><td>35.03</td><td>35.06</td><td>0</td><td>5</td><td>&quot;right&quot;</td></tr><tr><td>73.72</td><td>173.52</td><td>28.49</td><td>33.74</td><td>239.39</td><td>67.97</td><td>34.99</td><td>34.95</td><td>0</td><td>6</td><td>&quot;right&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>12.52</td><td>-30.55</td><td>31.03</td><td>36.73</td><td>131.25</td><td>-47.64</td><td>31.97</td><td>36.35</td><td>2</td><td>35</td><td>&quot;left&quot;</td></tr><tr><td>14.21</td><td>-31.05</td><td>30.89</td><td>36.82</td><td>125.57</td><td>-52.61</td><td>31.87</td><td>36.48</td><td>2</td><td>36</td><td>&quot;left&quot;</td></tr><tr><td>15.55</td><td>-31.96</td><td>30.76</td><td>36.9</td><td>120.71</td><td>-56.55</td><td>31.78</td><td>36.61</td><td>2</td><td>37</td><td>&quot;left&quot;</td></tr><tr><td>16.51</td><td>-34.59</td><td>30.64</td><td>36.98</td><td>118.31</td><td>-59.96</td><td>31.69</td><td>36.76</td><td>2</td><td>38</td><td>&quot;left&quot;</td></tr><tr><td>23.33</td><td>-37.01</td><td>30.52</td><td>37.07</td><td>114.46</td><td>-61.8</td><td>31.6</td><td>36.91</td><td>2</td><td>39</td><td>&quot;left&quot;</td></tr><tr><td>29.21</td><td>-38.7</td><td>30.42</td><td>37.15</td><td>111.4</td><td>-63.3</td><td>31.51</td><td>37.07</td><td>2</td><td>40</td><td>&quot;left&quot;</td></tr><tr><td>36.19</td><td>-41.96</td><td>30.32</td><td>37.23</td><td>108.02</td><td>-66.29</td><td>31.44</td><td>37.24</td><td>2</td><td>41</td><td>&quot;left&quot;</td></tr><tr><td>43.16</td><td>-44.65</td><td>30.24</td><td>37.31</td><td>103.0</td><td>-70.39</td><td>31.37</td><td>37.41</td><td>2</td><td>42</td><td>&quot;left&quot;</td></tr><tr><td>51.22</td><td>-50.79</td><td>30.18</td><td>37.38</td><td>98.01</td><td>-72.74</td><td>31.31</td><td>37.58</td><td>2</td><td>43</td><td>&quot;left&quot;</td></tr><tr><td>56.39</td><td>-56.83</td><td>30.13</td><td>37.45</td><td>95.02</td><td>-73.98</td><td>31.26</td><td>37.75</td><td>2</td><td>44</td><td>&quot;left&quot;</td></tr><tr><td>60.68</td><td>-66.84</td><td>30.09</td><td>37.53</td><td>89.67</td><td>-76.75</td><td>31.21</td><td>37.92</td><td>2</td><td>45</td><td>&quot;left&quot;</td></tr><tr><td>63.84</td><td>-75.66</td><td>30.07</td><td>37.6</td><td>85.81</td><td>-80.96</td><td>31.18</td><td>38.08</td><td>2</td><td>46</td><td>&quot;left&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (86, 11)\n",
+       "shape: (52, 11)\n",
        "┌───────────┬─────────────┬───────────┬───────────┬───┬──────────────────┬───────────┬─────────────────┬───────────────┐\n",
        "│ adjustedO ┆ adjustedDir ┆ adjustedX ┆ adjustedY ┆ … ┆ adjustedYDefende ┆ blockType ┆ framesSinceSnap ┆ blockLocation │\n",
        "│ ---       ┆ ---         ┆ ---       ┆ ---       ┆   ┆ r                ┆ ---       ┆ ---             ┆ ---           │\n",
        "│ f64       ┆ f64         ┆ f64       ┆ f64       ┆   ┆ ---              ┆ i64       ┆ i64             ┆ str           │\n",
        "│           ┆             ┆           ┆           ┆   ┆ f64              ┆           ┆                 ┆               │\n",
        "╞═══════════╪═════════════╪═══════════╪═══════════╪═══╪══════════════════╪═══════════╪═════════════════╪═══════════════╡\n",
-       "│ 188.03    ┆ -157.22     ┆ 28.49     ┆ 19.13     ┆ … ┆ 20.79            ┆ 0         ┆ -5              ┆ right         │\n",
-       "│ 188.03    ┆ -159.34     ┆ 28.49     ┆ 19.13     ┆ … ┆ 20.79            ┆ 0         ┆ -4              ┆ right         │\n",
-       "│ 188.03    ┆ -166.34     ┆ 28.49     ┆ 19.12     ┆ … ┆ 20.78            ┆ 0         ┆ -3              ┆ right         │\n",
-       "│ 188.03    ┆ -173.62     ┆ 28.49     ┆ 19.12     ┆ … ┆ 20.78            ┆ 0         ┆ -2              ┆ right         │\n",
+       "│ 80.08     ┆ -32.54      ┆ 28.07     ┆ 33.8      ┆ … ┆ 35.35            ┆ 0         ┆ -5              ┆ right         │\n",
+       "│ 81.64     ┆ -43.62      ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.35            ┆ 0         ┆ -4              ┆ right         │\n",
+       "│ 83.13     ┆ -43.7       ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.34            ┆ 0         ┆ -3              ┆ right         │\n",
+       "│ 83.13     ┆ -47.95      ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.34            ┆ 0         ┆ -2              ┆ right         │\n",
        "│ …         ┆ …           ┆ …         ┆ …         ┆ … ┆ …                ┆ …         ┆ …               ┆ …             │\n",
-       "│ 126.45    ┆ -54.5       ┆ 29.62     ┆ 31.05     ┆ … ┆ 43.78            ┆ 0         ┆ 77              ┆ left          │\n",
-       "│ 128.72    ┆ -53.95      ┆ 29.47     ┆ 31.26     ┆ … ┆ 44.09            ┆ 0         ┆ 78              ┆ left          │\n",
-       "│ 128.72    ┆ -53.66      ┆ 29.32     ┆ 31.46     ┆ … ┆ 44.36            ┆ 0         ┆ 79              ┆ left          │\n",
-       "│ 127.37    ┆ -53.13      ┆ 29.18     ┆ 31.66     ┆ … ┆ 44.62            ┆ 0         ┆ 80              ┆ left          │\n",
+       "│ 51.22     ┆ -50.79      ┆ 30.18     ┆ 37.38     ┆ … ┆ 37.58            ┆ 2         ┆ 43              ┆ left          │\n",
+       "│ 56.39     ┆ -56.83      ┆ 30.13     ┆ 37.45     ┆ … ┆ 37.75            ┆ 2         ┆ 44              ┆ left          │\n",
+       "│ 60.68     ┆ -66.84      ┆ 30.09     ┆ 37.53     ┆ … ┆ 37.92            ┆ 2         ┆ 45              ┆ left          │\n",
+       "│ 63.84     ┆ -75.66      ┆ 30.07     ┆ 37.6      ┆ … ┆ 38.08            ┆ 2         ┆ 46              ┆ left          │\n",
        "└───────────┴─────────────┴───────────┴───────────┴───┴──────────────────┴───────────┴─────────────────┴───────────────┘"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%config IPCompleter.greedy=True\n",
+    "%config IPCompleter.display_limit=500 \n",
+    "%config Polars.Lazy.frame_repr.max_elements=500  # Replace 10 with the desired number of rows\n",
+    "\n",
+    "\n",
     "test_blocking = test_data.filter(pl.col('jerseyNumber')==JERSEY_NUMBER).filter(pl.col('jerseyNumberDefender')==JERSEY_NUMBER_DEFENDER)\n",
     "test_blocking.select(\n",
     "    'adjustedO', 'adjustedDir', 'adjustedX', 'adjustedY', 'adjustedODefender', \n",
     "    'adjustedDirDefender', 'adjustedXDefender', 'adjustedYDefender', 'blockType',\n",
     "    'framesSinceSnap', 'blockLocation'\n",
-    ")"
+    ").filter(pl.col('framesSinceSnap') >= 6).filter(pl.col('framesSinceSnap')>="
    ]
   },
   {
