--- a/coneAnalysis/cone_analysis.ipynb
+++ b/coneAnalysis/cone_analysis.ipynb
@@ -10,13 +10,7 @@
     "import polars as pl\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math as math\n",
-    "# find a better way to import?\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.join(os.path.dirname(''), '..'))\n",
-    "\n",
-    "from constants import *\n"
+    "import math as math"
    ]
   },
   {
@@ -92,12 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e74626b0-a053-4344-bf2e-bdcd3e862b65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CONE_ANGLE = 120 # degrees\n",
+    "CONE_ANGLE_FAR = 60 # degrees\n",
+    "CONE_ANGLE_CLOSE = 120 # degrees\n",
     "MAX_DISTANCE = 3 # yards\n",
     "BLOCKING_RADIUS = 1.25 # yards\n",
     "\n",
@@ -110,7 +105,7 @@
     "    player1 = row[0:4]\n",
     "    player2 = row[4:]\n",
     "\n",
-    "    if is_in_vision_cone(player1, player2):\n",
+    "    if is_in_vision_cone(player1, player2, CONE_ANGLE_FAR, MAX_DISTANCE) or is_in_vision_cone(player1, player2, CONE_ANGLE_CLOSE, MAX_DISTANCE/3):\n",
     "        blocking_status = 1\n",
     "\n",
     "    if is_blocking(player1, player2) and blocking_status == 1:\n",
@@ -129,8 +124,8 @@
     "\n",
     "    return 0\n",
     "\n",
-    "def is_in_vision_cone(player1: tuple, player2: tuple, cone_angle=CONE_ANGLE) -> bool:\n",
-    "    return (is_in_angle(player1, player2, cone_angle) and is_in_distance(player1, player2))\n",
+    "def is_in_vision_cone(player1: tuple, player2: tuple, cone_angle, distance) -> bool:\n",
+    "    return (is_in_angle(player1, player2, cone_angle) and is_in_distance(player1, player2, distance))\n",
     "\n",
     "def is_in_angle(player1: tuple, player2: tuple, cone_angle) -> bool:\n",
     "    half_cone_angle = cone_angle / 2\n",
@@ -169,9 +164,9 @@
     "    \n",
     "    return False\n",
     "\n",
-    "def is_in_distance(player1: tuple, player2: tuple) -> bool:\n",
+    "def is_in_distance(player1: tuple, player2: tuple, dist=MAX_DISTANCE) -> bool:\n",
     "    distance_between_players = calculate_distance(player1, player2)\n",
-    "    if distance_between_players <= MAX_DISTANCE:\n",
+    "    if distance_between_players <= dist:\n",
     "        return True\n",
     "    \n",
     "    return False\n",
@@ -197,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "1130d89d-3973-48d9-98ce-d95b4fc6de93",
    "metadata": {},
    "outputs": [],
@@ -228,8 +223,9 @@
     "    return is_in_angle(player2, player1, SIDE_CONE_ANGLES)\n",
     "\n",
     "# Both players can see each other\n",
+    "# Only need to check player2 vision cone since we calculate blockType based on player1 earlier\n",
     "def is_dent(player1: tuple, player2: tuple) -> bool:\n",
-    "    return is_in_vision_cone(player1, player2, 50) and is_in_vision_cone(player2, player1, 50)\n",
+    "    return is_in_vision_cone(player2, player1, 50, MAX_DISTANCE)\n",
     "\n",
     "def is_right_vision_cone(player1: tuple, player2: tuple) -> bool:\n",
     "    player2[0] = (player2[0] - 90) % 360\n",
@@ -239,15 +235,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3120895b-29e3-4bbb-8b55-6ffcdf587384",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GAME_ID = 2022091500\n",
-    "PLAY_ID = 55\n",
-    "JERSEY_NUMBER = '62'\n",
-    "JERSEY_NUMBER_DEFENDER = '97'\n",
+    "GAME_ID = 2022091107\n",
+    "PLAY_ID = 959\n",
+    "JERSEY_NUMBER = '42'\n",
+    "JERSEY_NUMBER_DEFENDER = '52'\n",
     "\n",
     "labeled = tracking.filter(pl.col('gameId')==GAME_ID)\n",
     "\n",
@@ -263,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4a9fd1a6-62ca-4c8c-86a8-12853d69cb11",
    "metadata": {},
    "outputs": [],
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ef1f12a3-c2df-4692-88b0-06d7d0c5aa40",
    "metadata": {},
    "outputs": [],
@@ -293,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "55dff58e-5318-4f3b-a680-5ca0da8dfadb",
    "metadata": {},
    "outputs": [],
@@ -313,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b215deae-24c8-4e0e-96d9-5e8d8cf6e9f2",
    "metadata": {},
    "outputs": [],
@@ -328,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "4fe4010a-0725-4bde-86e4-2400cb4d51ae",
    "metadata": {},
    "outputs": [
@@ -341,51 +337,54 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (52, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedO</th><th>adjustedDir</th><th>adjustedX</th><th>adjustedY</th><th>adjustedODefender</th><th>adjustedDirDefender</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>blockLocation</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>80.08</td><td>-32.54</td><td>28.07</td><td>33.8</td><td>245.97</td><td>81.62</td><td>35.0</td><td>35.35</td><td>0</td><td>-5</td><td>&quot;right&quot;</td></tr><tr><td>81.64</td><td>-43.62</td><td>28.08</td><td>33.8</td><td>245.97</td><td>100.92</td><td>35.01</td><td>35.35</td><td>0</td><td>-4</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-43.7</td><td>28.08</td><td>33.8</td><td>247.56</td><td>110.45</td><td>35.02</td><td>35.34</td><td>0</td><td>-3</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-47.95</td><td>28.08</td><td>33.8</td><td>247.56</td><td>126.32</td><td>35.04</td><td>35.34</td><td>0</td><td>-2</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-57.33</td><td>28.09</td><td>33.8</td><td>247.56</td><td>130.24</td><td>35.04</td><td>35.34</td><td>0</td><td>-1</td><td>&quot;right&quot;</td></tr><tr><td>83.13</td><td>-164.93</td><td>28.11</td><td>33.79</td><td>246.7</td><td>121.34</td><td>35.05</td><td>35.32</td><td>0</td><td>0</td><td>&quot;right&quot;</td></tr><tr><td>82.33</td><td>178.18</td><td>28.12</td><td>33.79</td><td>245.93</td><td>106.78</td><td>35.05</td><td>35.3</td><td>0</td><td>1</td><td>&quot;right&quot;</td></tr><tr><td>81.52</td><td>173.78</td><td>28.13</td><td>33.78</td><td>244.84</td><td>95.22</td><td>35.05</td><td>35.28</td><td>0</td><td>2</td><td>&quot;right&quot;</td></tr><tr><td>80.11</td><td>164.91</td><td>28.16</td><td>33.77</td><td>245.72</td><td>88.76</td><td>35.05</td><td>35.23</td><td>0</td><td>3</td><td>&quot;right&quot;</td></tr><tr><td>78.45</td><td>168.12</td><td>28.2</td><td>33.77</td><td>241.88</td><td>86.25</td><td>35.05</td><td>35.16</td><td>0</td><td>4</td><td>&quot;right&quot;</td></tr><tr><td>75.76</td><td>171.64</td><td>28.31</td><td>33.75</td><td>240.15</td><td>79.68</td><td>35.03</td><td>35.06</td><td>0</td><td>5</td><td>&quot;right&quot;</td></tr><tr><td>73.72</td><td>173.52</td><td>28.49</td><td>33.74</td><td>239.39</td><td>67.97</td><td>34.99</td><td>34.95</td><td>0</td><td>6</td><td>&quot;right&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>12.52</td><td>-30.55</td><td>31.03</td><td>36.73</td><td>131.25</td><td>-47.64</td><td>31.97</td><td>36.35</td><td>2</td><td>35</td><td>&quot;left&quot;</td></tr><tr><td>14.21</td><td>-31.05</td><td>30.89</td><td>36.82</td><td>125.57</td><td>-52.61</td><td>31.87</td><td>36.48</td><td>2</td><td>36</td><td>&quot;left&quot;</td></tr><tr><td>15.55</td><td>-31.96</td><td>30.76</td><td>36.9</td><td>120.71</td><td>-56.55</td><td>31.78</td><td>36.61</td><td>2</td><td>37</td><td>&quot;left&quot;</td></tr><tr><td>16.51</td><td>-34.59</td><td>30.64</td><td>36.98</td><td>118.31</td><td>-59.96</td><td>31.69</td><td>36.76</td><td>2</td><td>38</td><td>&quot;left&quot;</td></tr><tr><td>23.33</td><td>-37.01</td><td>30.52</td><td>37.07</td><td>114.46</td><td>-61.8</td><td>31.6</td><td>36.91</td><td>2</td><td>39</td><td>&quot;left&quot;</td></tr><tr><td>29.21</td><td>-38.7</td><td>30.42</td><td>37.15</td><td>111.4</td><td>-63.3</td><td>31.51</td><td>37.07</td><td>2</td><td>40</td><td>&quot;left&quot;</td></tr><tr><td>36.19</td><td>-41.96</td><td>30.32</td><td>37.23</td><td>108.02</td><td>-66.29</td><td>31.44</td><td>37.24</td><td>2</td><td>41</td><td>&quot;left&quot;</td></tr><tr><td>43.16</td><td>-44.65</td><td>30.24</td><td>37.31</td><td>103.0</td><td>-70.39</td><td>31.37</td><td>37.41</td><td>2</td><td>42</td><td>&quot;left&quot;</td></tr><tr><td>51.22</td><td>-50.79</td><td>30.18</td><td>37.38</td><td>98.01</td><td>-72.74</td><td>31.31</td><td>37.58</td><td>2</td><td>43</td><td>&quot;left&quot;</td></tr><tr><td>56.39</td><td>-56.83</td><td>30.13</td><td>37.45</td><td>95.02</td><td>-73.98</td><td>31.26</td><td>37.75</td><td>2</td><td>44</td><td>&quot;left&quot;</td></tr><tr><td>60.68</td><td>-66.84</td><td>30.09</td><td>37.53</td><td>89.67</td><td>-76.75</td><td>31.21</td><td>37.92</td><td>2</td><td>45</td><td>&quot;left&quot;</td></tr><tr><td>63.84</td><td>-75.66</td><td>30.07</td><td>37.6</td><td>85.81</td><td>-80.96</td><td>31.18</td><td>38.08</td><td>2</td><td>46</td><td>&quot;left&quot;</td></tr></tbody></table></div>"
+       "<small>shape: (27, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>adjustedO</th><th>adjustedDir</th><th>adjustedX</th><th>adjustedY</th><th>adjustedODefender</th><th>adjustedDirDefender</th><th>adjustedXDefender</th><th>adjustedYDefender</th><th>blockType</th><th>framesSinceSnap</th><th>blockLocation</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>i64</td><td>i64</td><td>str</td></tr></thead><tbody><tr><td>93.25</td><td>137.02</td><td>26.18</td><td>38.22</td><td>226.45</td><td>6.63</td><td>26.27</td><td>38.8</td><td>2</td><td>17</td><td>&quot;left&quot;</td></tr><tr><td>111.61</td><td>132.09</td><td>26.36</td><td>38.41</td><td>223.19</td><td>10.46</td><td>26.09</td><td>38.83</td><td>2</td><td>18</td><td>&quot;left&quot;</td></tr><tr><td>123.1</td><td>125.74</td><td>26.5</td><td>38.56</td><td>222.05</td><td>15.81</td><td>25.94</td><td>38.87</td><td>2</td><td>19</td><td>&quot;left&quot;</td></tr><tr><td>135.39</td><td>113.32</td><td>26.57</td><td>38.7</td><td>219.26</td><td>21.24</td><td>25.82</td><td>38.91</td><td>2</td><td>20</td><td>&quot;left&quot;</td></tr><tr><td>154.08</td><td>96.49</td><td>26.6</td><td>38.8</td><td>219.26</td><td>25.92</td><td>25.72</td><td>38.95</td><td>2</td><td>21</td><td>&quot;left&quot;</td></tr><tr><td>175.17</td><td>73.21</td><td>26.59</td><td>38.89</td><td>221.37</td><td>28.92</td><td>25.64</td><td>38.99</td><td>2</td><td>22</td><td>&quot;left&quot;</td></tr><tr><td>189.32</td><td>42.42</td><td>26.55</td><td>38.95</td><td>207.37</td><td>18.45</td><td>25.55</td><td>39.0</td><td>2</td><td>23</td><td>&quot;left&quot;</td></tr><tr><td>196.88</td><td>19.91</td><td>26.49</td><td>38.98</td><td>203.28</td><td>16.18</td><td>25.48</td><td>39.03</td><td>2</td><td>24</td><td>&quot;left&quot;</td></tr><tr><td>202.75</td><td>13.49</td><td>26.41</td><td>39.01</td><td>192.18</td><td>9.06</td><td>25.39</td><td>39.04</td><td>2</td><td>25</td><td>&quot;none&quot;</td></tr><tr><td>205.77</td><td>3.18</td><td>26.33</td><td>39.03</td><td>206.75</td><td>5.01</td><td>25.28</td><td>39.05</td><td>2</td><td>26</td><td>&quot;left&quot;</td></tr><tr><td>205.17</td><td>357.52</td><td>26.26</td><td>39.03</td><td>205.44</td><td>9.89</td><td>25.13</td><td>39.09</td><td>2</td><td>27</td><td>&quot;left&quot;</td></tr><tr><td>206.53</td><td>351.3</td><td>26.19</td><td>39.02</td><td>201.08</td><td>10.93</td><td>24.99</td><td>39.12</td><td>0</td><td>28</td><td>&quot;left&quot;</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>181.73</td><td>313.37</td><td>26.03</td><td>38.95</td><td>193.7</td><td>28.06</td><td>24.27</td><td>39.34</td><td>1</td><td>32</td><td>&quot;left&quot;</td></tr><tr><td>168.97</td><td>299.76</td><td>26.01</td><td>38.93</td><td>194.65</td><td>34.77</td><td>24.08</td><td>39.47</td><td>1</td><td>33</td><td>&quot;left&quot;</td></tr><tr><td>154.66</td><td>295.05</td><td>26.0</td><td>38.91</td><td>183.63</td><td>38.94</td><td>23.9</td><td>39.61</td><td>1</td><td>34</td><td>&quot;left&quot;</td></tr><tr><td>145.03</td><td>294.2</td><td>26.0</td><td>38.9</td><td>181.35</td><td>44.46</td><td>23.75</td><td>39.76</td><td>1</td><td>35</td><td>&quot;left&quot;</td></tr><tr><td>139.57</td><td>347.92</td><td>25.99</td><td>38.89</td><td>157.27</td><td>47.1</td><td>23.61</td><td>39.9</td><td>1</td><td>36</td><td>&quot;none&quot;</td></tr><tr><td>136.09</td><td>66.51</td><td>25.98</td><td>38.9</td><td>161.53</td><td>53.26</td><td>23.52</td><td>40.02</td><td>1</td><td>37</td><td>&quot;none&quot;</td></tr><tr><td>135.38</td><td>73.48</td><td>25.98</td><td>38.91</td><td>149.14</td><td>57.68</td><td>23.43</td><td>40.16</td><td>1</td><td>38</td><td>&quot;none&quot;</td></tr><tr><td>136.68</td><td>72.93</td><td>25.97</td><td>38.94</td><td>155.13</td><td>65.49</td><td>23.4</td><td>40.24</td><td>1</td><td>39</td><td>&quot;none&quot;</td></tr><tr><td>138.39</td><td>66.75</td><td>25.96</td><td>38.96</td><td>141.81</td><td>69.84</td><td>23.36</td><td>40.36</td><td>1</td><td>40</td><td>&quot;none&quot;</td></tr><tr><td>140.99</td><td>44.39</td><td>25.93</td><td>38.98</td><td>146.39</td><td>75.97</td><td>23.37</td><td>40.4</td><td>1</td><td>41</td><td>&quot;none&quot;</td></tr><tr><td>142.3</td><td>35.32</td><td>25.9</td><td>39.0</td><td>133.3</td><td>78.38</td><td>23.35</td><td>40.47</td><td>1</td><td>42</td><td>&quot;right&quot;</td></tr><tr><td>142.3</td><td>27.32</td><td>25.87</td><td>39.02</td><td>136.84</td><td>83.43</td><td>23.38</td><td>40.47</td><td>1</td><td>43</td><td>&quot;none&quot;</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (52, 11)\n",
+       "shape: (27, 11)\n",
        "┌───────────┬─────────────┬───────────┬───────────┬───┬──────────────────┬───────────┬─────────────────┬───────────────┐\n",
        "│ adjustedO ┆ adjustedDir ┆ adjustedX ┆ adjustedY ┆ … ┆ adjustedYDefende ┆ blockType ┆ framesSinceSnap ┆ blockLocation │\n",
        "│ ---       ┆ ---         ┆ ---       ┆ ---       ┆   ┆ r                ┆ ---       ┆ ---             ┆ ---           │\n",
        "│ f64       ┆ f64         ┆ f64       ┆ f64       ┆   ┆ ---              ┆ i64       ┆ i64             ┆ str           │\n",
        "│           ┆             ┆           ┆           ┆   ┆ f64              ┆           ┆                 ┆               │\n",
        "╞═══════════╪═════════════╪═══════════╪═══════════╪═══╪══════════════════╪═══════════╪═════════════════╪═══════════════╡\n",
-       "│ 80.08     ┆ -32.54      ┆ 28.07     ┆ 33.8      ┆ … ┆ 35.35            ┆ 0         ┆ -5              ┆ right         │\n",
-       "│ 81.64     ┆ -43.62      ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.35            ┆ 0         ┆ -4              ┆ right         │\n",
-       "│ 83.13     ┆ -43.7       ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.34            ┆ 0         ┆ -3              ┆ right         │\n",
-       "│ 83.13     ┆ -47.95      ┆ 28.08     ┆ 33.8      ┆ … ┆ 35.34            ┆ 0         ┆ -2              ┆ right         │\n",
+       "│ 93.25     ┆ 137.02      ┆ 26.18     ┆ 38.22     ┆ … ┆ 38.8             ┆ 2         ┆ 17              ┆ left          │\n",
+       "│ 111.61    ┆ 132.09      ┆ 26.36     ┆ 38.41     ┆ … ┆ 38.83            ┆ 2         ┆ 18              ┆ left          │\n",
+       "│ 123.1     ┆ 125.74      ┆ 26.5      ┆ 38.56     ┆ … ┆ 38.87            ┆ 2         ┆ 19              ┆ left          │\n",
+       "│ 135.39    ┆ 113.32      ┆ 26.57     ┆ 38.7      ┆ … ┆ 38.91            ┆ 2         ┆ 20              ┆ left          │\n",
        "│ …         ┆ …           ┆ …         ┆ …         ┆ … ┆ …                ┆ …         ┆ …               ┆ …             │\n",
-       "│ 51.22     ┆ -50.79      ┆ 30.18     ┆ 37.38     ┆ … ┆ 37.58            ┆ 2         ┆ 43              ┆ left          │\n",
-       "│ 56.39     ┆ -56.83      ┆ 30.13     ┆ 37.45     ┆ … ┆ 37.75            ┆ 2         ┆ 44              ┆ left          │\n",
-       "│ 60.68     ┆ -66.84      ┆ 30.09     ┆ 37.53     ┆ … ┆ 37.92            ┆ 2         ┆ 45              ┆ left          │\n",
-       "│ 63.84     ┆ -75.66      ┆ 30.07     ┆ 37.6      ┆ … ┆ 38.08            ┆ 2         ┆ 46              ┆ left          │\n",
+       "│ 138.39    ┆ 66.75       ┆ 25.96     ┆ 38.96     ┆ … ┆ 40.36            ┆ 1         ┆ 40              ┆ none          │\n",
+       "│ 140.99    ┆ 44.39       ┆ 25.93     ┆ 38.98     ┆ … ┆ 40.4             ┆ 1         ┆ 41              ┆ none          │\n",
+       "│ 142.3     ┆ 35.32       ┆ 25.9      ┆ 39.0      ┆ … ┆ 40.47            ┆ 1         ┆ 42              ┆ right         │\n",
+       "│ 142.3     ┆ 27.32       ┆ 25.87     ┆ 39.02     ┆ … ┆ 40.47            ┆ 1         ┆ 43              ┆ none          │\n",
        "└───────────┴─────────────┴───────────┴───────────┴───┴──────────────────┴───────────┴─────────────────┴───────────────┘"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%config IPCompleter.greedy=True\n",
-    "%config IPCompleter.display_limit=500 \n",
-    "%config Polars.Lazy.frame_repr.max_elements=500  # Replace 10 with the desired number of rows\n",
-    "\n",
-    "\n",
     "test_blocking = test_data.filter(pl.col('jerseyNumber')==JERSEY_NUMBER).filter(pl.col('jerseyNumberDefender')==JERSEY_NUMBER_DEFENDER)\n",
     "test_blocking.select(\n",
     "    'adjustedO', 'adjustedDir', 'adjustedX', 'adjustedY', 'adjustedODefender', \n",
     "    'adjustedDirDefender', 'adjustedXDefender', 'adjustedYDefender', 'blockType',\n",
     "    'framesSinceSnap', 'blockLocation'\n",
-    ").filter(pl.col('framesSinceSnap') >= 6).filter(pl.col('framesSinceSnap')>="
+    ").filter(pl.col('framesSinceSnap')>=0).filter(pl.col('framesSinceSnap')>=17)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "57311b54-411d-4afe-81ce-1b9e287d8742",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e33ddb2-9f18-4409-94f7-e31d561f1491",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -407,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
