crop image and use highligh_ids

--- a/coneAnalysis/ConeVis.ipynb
+++ b/coneAnalysis/ConeVis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9b573383-f866-4f0b-8475-4073d2e7c6a1",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "9747320b-13df-4458-a2b2-37aee08e4825",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
     "    field = get_blank_field()\n",
     "    draw = ImageDraw.Draw(field)\n",
     "\n",
-    "    p_rad = 2\n",
+    "    p_rad = 4\n",
     "    padding=2\n",
     "    fb_w=8\n",
     "    fb_h=5\n",
@@ -158,8 +158,10 @@
     "            draw.ellipse((x-fb_w, y-fb_h, x+fb_w, y+fb_h), fill=colors[row[1][\"club\"]])\n",
     "        # Draw the players with color according to the colors dictionary\n",
     "        else:\n",
-    "            vision_cone_coordinates = get_vision_cone_coordinates(row[1])\n",
-    "            draw.polygon(vision_cone_coordinates, outline='black')\n",
+    "            if row[1][\"jerseyNumber\"] in highlight_ids:    \n",
+    "                vision_cone_coordinates = get_vision_cone_coordinates(row[1])\n",
+    "                draw.polygon(vision_cone_coordinates, outline='black')\n",
+    "                \n",
     "            draw.ellipse((x-p_rad, y-p_rad, x+p_rad, y+p_rad), fill=colors[row[1][\"club\"]])\n",
     "        \n",
     "    return field\n",
@@ -250,13 +252,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "e27fdbbb-4d0a-4e48-9d67-cd99aa976658",
    "metadata": {},
    "outputs": [],
    "source": [
     "gif_df = tracking.filter(pl.col(\"gameId\")==2022091107).filter(pl.col(\"playId\")==959)\n",
-    "create_play_gif(gif_df.to_pandas(), \"./test\")"
+    "create_play_gif(gif_df.to_pandas(), \"./test\", crop=True, highlight_ids=[\"42\", \"52\"])"
    ]
   },
   {
